--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -34,8 +34,8 @@
 
   <div class=" w-full" >
   <div class=" container m-auto  ">
-    <ul class="w-full flex flex-row flex-wrap ">
-      <li class="w-1/2 p-4"*ngFor="let repo of paginatedRepositories ">
+    <ul class="w-full flex flex-col md:flex-row flex-wrap ">
+      <li class="w-full md:w-1/2 p-4"*ngFor="let repo of paginatedRepositories ">
        <div class="border-2 p-2 border-black">
         <p class=" text-2xl text-blue-400">
           {{ repo.name }}
